--- a/public/css/location.css
+++ b/public/css/location.css
@@ -184,6 +184,9 @@
     font-weight: bold;
 }
 
+.location_tab>ul>.active {
+    font-weight: bold;
+}
 
 /**********************tab_first_content**********************/
 
