--- a/public/css/room.css
+++ b/public/css/room.css
@@ -90,7 +90,7 @@
   letter-spacing: 2px;
 }
 .room_textbox {
-  padding: 50px 0;
+  padding: 50px 50px 50px 0;
 }
 .room_detail_w {
   width: 90px;
@@ -99,6 +99,7 @@
   border: 1px solid #fff;
   color: #fff;
   transition: 0.3s;
+  border-radius: 2px;
 }
 .room_detail_w:hover {
   background-color: #eeece7;
