--- a/public/css/write.css
+++ b/public/css/write.css
@@ -30,10 +30,12 @@
   background-color: #19344d;
   color: white;
   padding: 15px;
+  border-radius: 2px;
 }
 #backbtn {
   border: none;
   background-color: #19344d;
   color: white;
   padding: 15px;
+  border-radius: 2px;
 }
