--- a/views/event.ejs
+++ b/views/event.ejs
@@ -23,7 +23,7 @@
                     </div>
                     <div class="e_seach_right">
                         <input type="text" id="e_date_search" name="e_date_search" value="" title="검색어 입력" placeholder="검색어를 입력해주세요." class="e_date_search">
-                        <button type="button" class="e_search" onclick=""><a href="">검색</a></button>
+                        <button type="button" class="e_search" onclick=""><a href="">SEARCH</a></button>
                     </div>
                 </div>
             </article>
@@ -42,6 +42,7 @@
                         <div>
                             <a href="event_detail_pic"><img src="../img/hotel_plan_20220405171919_lg_pc.jpg" alt=""></a>
                         </div>
+                        <a href="event_detail_pic">
                         <div class="figure_txt">
                             <figcaption>PicCance Packagece Package</figcaption>
                             <p>도심 속 감성 피크닉, 픽캉스 패키지</p>
@@ -51,11 +52,13 @@
                                     <span>70,000원</span>
                                 </div>
                         </div>
+                        </a>
                     </figure>
                     <figure class="js-load">
                         <div>
-                            <a href="event_detail_tea_set"><img src="../img/hotel_plan_20220513113105_lg_pc.jpg" alt=""></a>
+                            <a href="event_detail_tea_set"><img src="../Img/hotel_plan_20220513113105_lg_pc.jpg" alt=""></a>
                         </div>
+                        <a href="event_detail_tea_set">
                         <div class="figure_txt">
                             <figcaption>Summer Blue Afternoon Tea Set</figcaption>
                             <p>썸머 블루 애프터눈 티</p>
@@ -65,11 +68,13 @@
                                     <span>49,000원</span>
                                 </div>
                         </div>
+                        </a>
                     </figure>
                     <figure class="js-load">
                         <div>
                             <a href=""><img src="../img/hotel_plan_20220506164319_lg_pc.jpg" alt=""></a>
                         </div>
+                        <a href="">
                         <div class="figure_txt">
                             <figcaption>BBQ buffet on the outdoor terrace</figcaption>
                             <p>오크룸 야외테라스에서 즐기는 BBQ 부페</p>
@@ -79,6 +84,7 @@
                                     <span>65,000원</span>
                                 </div>
                         </div>
+                        </a>
                     </figure>
                     <figure class="js-load">
                         <div>
@@ -96,7 +102,7 @@
                     </figure>
                     <figure class="js-load">
                         <div>
-                            <a href=""><img src="../img/hotel_plan_20200701173926_lg_pc.jpg" alt=""></a>
+                            <a href=""><img src="../Img/hotel_plan_20200701173926_lg_pc.jpg" alt=""></a>
                         </div>
                         <div class="figure_txt">
                             <figcaption>Oak Room Jazz Night</figcaption>
@@ -110,7 +116,7 @@
                     </figure>
                     <figure class="js-load">
                         <div>
-                            <a href=""><img src="../img/hotel_plan_20220401152403_lg_pc.jpg" alt=""></a>
+                            <a href=""><img src="../Img/hotel_plan_20220401152403_lg_pc.jpg" alt=""></a>
                         </div>
                         <div class="figure_txt">
                             <figcaption>Australian Wine Promotion</figcaption>
@@ -138,7 +144,7 @@
                     </figure>
                     <figure class="js-load">
                         <div>
-                            <a href=""><img src="../img/hotel_plan_20220404180725_lg_pc.jpg" alt=""></a>
+                            <a href=""><img src="../Img/hotel_plan_20220404180725_lg_pc.jpg" alt=""></a>
                         </div>
                         <div class="figure_txt">
                             <figcaption>Bistro 50, Special Pairing Set</figcaption>
@@ -152,7 +158,7 @@
                     </figure>
                     <figure class="js-load">
                         <div>
-                            <a href=""><img src="../img/hotel_plan_20210209114614_lg_pc.jpg" alt=""></a>
+                            <a href=""><img src="../Img/hotel_plan_20210209114614_lg_pc.jpg" alt=""></a>
                         </div>
                         <div class="figure_txt">
                             <figcaption>Gourmet To Go at Cilantro Deli</figcaption>
@@ -166,7 +172,7 @@
                     </figure>
                     <figure class="js-load">
                         <div>
-                            <a href=""><img src="../img/hotel_plan_20210517123844_lg_pc.jpg" alt=""></a>
+                            <a href=""><img src="../Img/hotel_plan_20210517123844_lg_pc.jpg" alt=""></a>
                         </div>
                         <div class="figure_txt">
                             <figcaption>Teppanyaki Special Course</figcaption>
@@ -181,11 +187,11 @@
                 </div>
             </article>
             <article class="e_more">
-                    <button id="js-btn-wrap" class="btn-wrap" type="button">더보기</button>
+                    <button id="js-btn-wrap" class="btn-wrap" type="button">MORE</button>
             </article>
             <div class="event_fix_btn" id="event_side">
                 <button onclick="topFunction()">TOP</button>
             </div>
         </section>
     </main>
-    <script src="../js/event.js"></script>
+    <script src="../JS/event.js"></script>
