--- a/views/event_detail_tea_set.ejs
+++ b/views/event_detail_tea_set.ejs
@@ -63,7 +63,9 @@
         </section>
         <article class="e_detail_more">
             <div>
-                <button id="e_btn" type="button"><a href="/event">목록</a></button>
+                <button id="e_btn" type="button" onclick="javascript:location.href='/event'">
+                    LIST
+                </button>
             </div>
         </article>
     </main>
