--- a/views/family_premium_deluxe.ejs
+++ b/views/family_premium_deluxe.ejs
@@ -4,7 +4,7 @@
       <div class="topimg family_premium_img">
         <div class="txtcont">
           <h2>Room</h2>
-          <strong>KING DELUXE MOUNTAIN</strong>
+          <strong>FAMILY PREMIUM DELUXE</strong>
           <p>
             보다 넓은 객실에서 여유로운 휴식을 즐길 수 있는 패밀리 프리미엄
             디럭스 룸(44㎡)은 침실과 응접실이 분리되어 있어 쾌적한 서비스를
@@ -277,7 +277,7 @@
     <button>
       <span class="material-symbols-outlined"> favorite </span>
     </button>
-    <button>
+    <button onclick="javascript:location.href='/reservation'">
       <span class="material-symbols-outlined"> calendar_month </span>
     </button>
   </div>
