--- a/views/join.ejs
+++ b/views/join.ejs
@@ -30,7 +30,7 @@
                         <label class="nec">ID</label>
                         <div class="join_input">
                             <input type="text" id="uid" placeholder="4~12자 (특수문자 불가)" class="mr10" name="id">
-                            <button class="join_btn">중복확인</button>
+                            <button class="join_btn">CHECK</button>
                         </div>
                     </li>
                     <li>
@@ -133,8 +133,8 @@
                 </ul>
             </article>
             <div class="join_submit">
-                <input type="button" value="이전" onclick="javascript:location.href='/join_agree'">
-                <input type="button" value="등록" id="joinBtn">
+                <input type="button" value="PREVIOUS" onclick="javascript:location.href='/join_agree'">
+                <input type="button" value="JOIN" id="joinBtn">
             </div>
         </section>
     </form>
