--- a/views/join_complete.ejs
+++ b/views/join_complete.ejs
@@ -28,8 +28,8 @@
             <span>제공받으실 수 있습니다.</span>
             </p>
             <div class="complete_btn">
-                <input type="button" value="로그인하기" onclick="javascript:location.href='/login'">
-                <input type="button" value="메인화면" onclick="javascript:location.href='/'">
+                <input type="button" value="LOGIN" onclick="javascript:location.href='/login'">
+                <input type="button" value="MAIN" onclick="javascript:location.href='/'">
             </div>
             </article>
         </section>
