--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,17 +22,18 @@
     <link rel="stylesheet" href="../css/updatenoti.css">
     <link rel="stylesheet" href="../css/write.css">
     <link rel="stylesheet" href="../css/reservation.css">
-    <link rel="stylesheet" href="../css/reservation_detail.css">
+    <link rel="stylesheet" href="../css/reservation2.css">
     <link rel="stylesheet" href="../css/room.css">
     <link rel="stylesheet" href="../css/roomdetail.css">
     <link rel="stylesheet" href="../css/room_imgurl.css">
     <link rel="stylesheet" href="../css/join_agree.css">
     <link rel="stylesheet" href="../css/join_complete.css">
+    <link rel="stylesheet" href="../css/reservation3.css">
+    <link rel="stylesheet" href="../css/offer.css">
     <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 <body>
     <header>
@@ -61,7 +62,8 @@
                 <ul>
                     <li><a href="room">객실</a></li>
                     <li><a href="intro">소개</a></li>
-                    <li><a href="event">프로모션</a></li>
+                    <li><a href="event">이벤트</a></li>
+                    <li><a href="offer">스페셜오퍼</a></li>
                     <li><a href="notice">공지사항</a></li>
                     <li><a href="reservation">예약</a></li>
                     <li><a href="location">오시는길</a></li>
@@ -111,8 +113,8 @@
                             <a class="menu-link">프로모션</a>
                         </li>
                             <ul class="menu-submenu accordion-content">
-                                <li><a class="head" href="#">객실패키지</a></li>
                                 <li><a class="head" href="event">이벤트</a></li>
+                                <li><a class="head" href="event">스페셜 오퍼</a></li>
                             </ul>
                         <li id="nav3" class="toggle accordion-toggle"> 
                             <span class="icon-plus"></span>
@@ -238,7 +240,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <%- script %>
     <script src="../js/calendar.js"></script>
-    <script src="../js/common.js"></script>
+    <script src="../JS/common.js"></script>
     <script src="../js/footer.js"></script>
 </body>
 </html>
