--- a/views/main.ejs
+++ b/views/main.ejs
@@ -39,7 +39,7 @@
                     <div class="main_checkin">
                         <h6>체크인</h6>
                         <div>
-                            <input type="text" id="MainCheakIn" value="2022-06-24" readonly></input>
+                            <input type="text" id="MainCheakIn" value="2022-06-24" readonly>
                         </div>
                     </div>
                     <span>
@@ -48,7 +48,7 @@
                     <div class="MainCheakOut">
                         <h6>체크아웃</h6>
                         <div>
-                            <input type="text" id="MainCheakOut" value="2022-06-24" readonly></input>
+                            <input type="text" id="MainCheakOut" value="2022-06-24" readonly>
                         </div>
                     </div>
                 </li>
@@ -71,7 +71,7 @@
                     </div>
                 </li>
                 <li class="main_search">
-                    <span><a href="">객실 검색</a></span>
+                    <button>SEARCH</button>
                 </li>
             </ul>
         </article>
@@ -85,7 +85,7 @@
         <article class="main_offer">
             <div class="mySwiper2 swiper">
                 <ul class="swiper-wrapper">
-                    <li class="swiper-slide">
+                    <li class="swiper-slide"><a href="offerIn1">
                         <h4>01</h4>
                         <h6>Millennium Hilton Seoul</h6>
                         <h4>Hilton Honors Discount Breakfast Included</h4>
@@ -93,8 +93,8 @@
                         <p>투숙 최대 1일 전까지 변경 또는 취소 가능.<br>조식 포함. 힐튼 Honors 회원 전용.</p>
                         <figure class="main_offer_img1">
                         </figure>
-                    </li>
-                    <li class="swiper-slide">
+                    </a></li>
+                    <li class="swiper-slide"><a href="offerIn2">
                         <h4>02</h4>
                         <h6>Millennium Hilton Seoul</h6>
                         <h4>Breakfast included</h4>
@@ -103,8 +103,8 @@
                             조식 포함.</p>
                         <figure class="main_offer_img2">
                         </figure>
-                    </li>
-                    <li class="swiper-slide">
+                    </a></li>
+                    <li class="swiper-slide"><a href="offerIn3">
                         <h4>03</h4>
                         <h6>Millennium Hilton Seoul</h6>
                         <h4>Pre-paid breakfast included</h4>
@@ -113,8 +113,8 @@
                             더블 힐튼 Honors 포인트 적립.</p>
                         <figure class="main_offer_img3">
                         </figure>
-                    </li>
-                    <li class="swiper-slide">
+                    </a></li>
+                    <li class="swiper-slide"><a href="offerIn4">
                         <h4>04</h4>
                         <h6>Millennium Hilton Seoul</h6>
                         <h4>Sweeten Your Stay</h4>
@@ -124,7 +124,7 @@
                         <figure class="main_offer_img4">
                         </figure>
                     </li>
-                    <li class="swiper-slide">
+                    <li class="swiper-slide"><a href="offerIn5">
                         <h4>05</h4>
                         <h6>Millennium Hilton Seoul</h6>
                         <h4>Honors Advance Purchase Breakfast Included</h4>
@@ -133,18 +133,18 @@
                             힐튼 Honors 회원 전용.</p>
                         <figure class="main_offer_img5">
                         </figure>
-                    </li>
-                    <li class="swiper-slide">
+                    </a></li>
+                    <li class="swiper-slide"><a href="offerIn6">
                         <h4>06</h4>
                         <h6>Millennium Hilton Seoul</h6>
-                        <h4>Pre-paid breakfast included</h4>
+                        <h4>Double Points</h4>
                         <h5>포인트 2배</h5>
                         <p>투숙 최대 1일 전까지 변경 또는 취소 가능.<br>
                             더블 힐튼 Honors 포인트 적립.</p>
                         <figure class="main_offer_img6">
                         </figure>
-                    </li>
-                    <li class="swiper-slide">
+                    </a></li>
+                    <li class="swiper-slide"><a href="offerIn7">
                         <h4>07</h4>
                         <h6>Millennium Hilton Seoul</h6>
                         <h4>Piccance Package</h4>
@@ -152,7 +152,7 @@
                         <p>피크닉 세트 및 맞춤형 힐튼 캔버스 가방 최대 25% 할인</p>
                         <figure class="main_offer_img7">
                         </figure>
-                    </li>
+                    </a></li>
                 </ul>
             </div>
             <span class="swiper-button-prev main_arrowL"></span>
@@ -270,7 +270,7 @@
             <figure id="Executive" class="tabcontent"></figure>
             <figure id="ExecutiveM" class="tabcontent"></figure>
             <figure id="Suite" class="tabcontent"></figure>
-            <span><a href="room">더보기</a></span>
+            <button type="button" class="navyBtn" onClick="location.href='room'">MORE</button>
         </article>
         <article class="main_roomtypeM">
             <span class="main_arrowM main_arrowL" onclick="plusSlides3(-1)"></span>
@@ -431,7 +431,7 @@
                     </div>
                 </a></li>
             </ul>
-            <span><a href="event">더보기</a></span>
+            <button type="button" class="navyBtn" onClick="location.href='event'">MORE</button>
         </article>
     </section>
     <section class="main_w1200">
