--- a/views/updatenoti.ejs
+++ b/views/updatenoti.ejs
@@ -22,7 +22,7 @@
         <option value="PARKING">PARKING</option>
       </selcet>
       <p class="noti_px">내용작성</p>
-      <input name="content" class="title_news" value="<%=row.content%>" />
+      <textarea name="content" class="title_news"><%=row.content%></textarea>
 
       <div class="notice_btnw">
         <input type="submit" value="저장" id="save" />
