--- a/views/write.ejs
+++ b/views/write.ejs
@@ -4,11 +4,9 @@
   </figure>
       <section class="noti_update">
         <h2 class="noti_px">공지사항 작성하기</h2>
-        <% if(typeof errs !== 'undefined') { %> 
-          <% errs.forEach((err)=>{%>
-            <h3><%=err.param%> : <%=err.msg%></h3>
-          <% })%> 
-        <% } %>
+        <% if(typeof errs !== "undefined"){ %> <% errs.forEach((err)=>{%>
+          <h4 style="color: red"><%=err.param%> : <%=err.msg%></h4>
+          <% }) %> <% } %>
         <form method="POST" action="/hiltonWrite">
               <h2 class="noti_px">제목</h2>
               <input type="text" name="title" class="title_number">
@@ -23,14 +21,14 @@
                 <option value="PARKING">PARKING</option>
               </selcet>
               <p class="noti_px">내용 작성 :</p>
-              <input type="text" name="content" class="title_news"></input>
-                <input type="submit" value="저장" id="save">
-                <input
+              <textarea name="content" class="title_news"></textarea>
+              <input type="submit" value="저장" id="save">
+              <input
                   type="button"
                   value="뒤로 가기"
                   onclick="javascript:location.href='/notice'"
                   id="backbtn"
-                />
+              />
         </form>
       </section>
     </main>
