--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,5 +1,3 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200;300;400;500;600;700;900&display=swap');
 
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0");
@@ -43,7 +41,7 @@ header .h_lang>a::after{
     box-sizing: border-box;
     border: 1px solid #999;
     font-family: inherit;  
-    background: url('arrow.jpg') no-repeat 95% 50%; 
+    /* background: url('arrow.jpg') no-repeat 95% 50%;  */
     border-radius: 0px; 
     border: none;
     margin-right: 5px;
@@ -69,11 +67,8 @@ header .h_lang>a::after{
     
 }
 
-.first{
-    background-color: black;
-}
 .h_nav>ul>.first>a{
-    color: white;
+    color: black;
 
 }
 h1>a>img{
@@ -134,11 +129,22 @@ h1>a>img{
 }
 .h_mobbox{
     display: none;
-    width: 100%;
+    /* width: 100%;
+    height: 100vh;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 99;
+    z-index: 99; */
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    background-color: white;
+    z-index: 999;
+
+    
   
 }
 .fullscreen_menu{
@@ -158,6 +164,7 @@ h1>a>img{
     align-items: center;
 } */
 .fullscreen_menu>ul>li>img {
+    cursor: pointer;
     width: 33px;
     height: 33px;
     padding-top: 3px;
