--- a/public/css/join_complete.css
+++ b/public/css/join_complete.css
@@ -26,14 +26,15 @@
 .complete_btn>input {
     width: 200px;
     padding: 15px 0;
-    background-color: #19344D;
-    color: #fff;
-    border: none;
+    border: 1px solid rgb(118,118,118);
     outline: none;
     cursor: pointer;
     margin: 10px 10px;
+    border-radius: 2px;
+    background-color: transparent;
 }
 
 .complete_btn>input:hover {
-    opacity: 0.8;
+    background-color: rgb(118,118,118);
+    color: #fff;
 }
