--- a/public/css/main.css
+++ b/public/css/main.css
@@ -140,7 +140,7 @@ body {
     padding-top: 17px; 
     padding-bottom: 8px; 
     border: none;
-    border-bottom: 2px solid #19344D;
+    border-bottom: 2px solid #B0AFAF;
     background: url(../img/arrow_drop_down_.png) no-repeat 100% 70%;
     background-size: 17% 60%;
     font-family: inherit;
@@ -238,13 +238,17 @@ body {
 .main_search{
     align-self: center;
 }
-.main_search>span>a{
+.main_search>button{
+    cursor: pointer;
+    width: 100%;
+    background-color: #002453;
+    border-radius: 2px;
     padding: 8px 30px;
-    background-color: #19344D;
-    font-size: 14px;
     color: #fff;
+    outline: none;
+    border: none;
 }
-.main_search>span>a:active{
+.main_search>button:hover{
     opacity: 90%;
 }
 /***************/
@@ -324,7 +328,7 @@ body {
   .swiper-slide {
     background: #fff;
 }
-  .swiper-slide figure {
+  .swiper-slide figure{
     display: block;
     width: 100%;
     height: 100%;
@@ -334,24 +338,24 @@ body {
     display: none;
   }
 /*************/
-.main_offer>div>ul>li>h6{
+.main_offer>div>ul>li>a>h6{
     font-size: 12px;
     color: #494949;
     margin-bottom: 60px;
 }
-.main_offer>div>ul>li>h4{
+.main_offer>div>ul>li>a>h4{
     color: #494949;
     margin-bottom: 8px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
-.main_offer>div>ul>li>h5{
+.main_offer>div>ul>li>a>h5{
     font-size: 14px;
     color: #494949;
     margin-bottom: 30px;
 }
-.main_offer>div>ul>li>p{
+.main_offer>div>ul>li>a>p{
     font-size: 12px;
     color: #B0AFAF;
     margin-bottom: 30px;
@@ -360,7 +364,7 @@ body {
     -webkit-line-clamp: 2;
     overflow: hidden;
 }
-.main_offer>div>ul>li>figure{
+.main_offer>div>ul>li>a>figure{
     width: 99%;
     height: 190px;
     border: 1px solid #d9d9d9;
@@ -388,12 +392,6 @@ body {
 .main_offer_img7{
     background-image: url(../img/main_offer_img7.jpg);
 }
-.main_offer_img8{
-    background-image: url(../img/main_offer_img8.jpg);
-}
-.main_offer_img9{
-    background-image: url(../img/main_offer_img9.jpg);
-}
 .spin_bar{
     display: flex;
     justify-content: center;
@@ -407,7 +405,7 @@ body {
     background-position: center center;
 }
 .spin_bar>.swiper-pagination-bullet-active{
-    background-color: #19344D;
+    background-color: #002453;
 }
 .spin_bar>.swiper-pagination-bullet{
     width: 10px; height: 10px;
@@ -551,20 +549,22 @@ body {
 #Suite{
     background-image: url(../img/room6.png);
 }
-.main_roomtype_wrap>span{
+.navyBtn{
+    cursor: pointer;
     display: block;
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-}
-.main_roomtype_wrap>span>a{
+    margin: auto;  margin-top: 30px;
     padding: 8px 30px;
-    background-color: #19344D;
-    font-size: 14px;
-    color: #fff;
+    box-sizing: border-box;
+    background-color: transparent;
+    color: #494949;
+    border: 1px solid rgb(118, 118, 118);
+    text-align: center;
+    border-radius: 3px;
+    transition: 0.3s;
 }
-.main_roomtype_wrap>span>a:active{
-opacity: 90%;
+.navyBtn:hover {
+    background-color: rgb(118, 118, 118);
+    color: #fff;
 }
 /*******/
 .main_roomtypeM{
