--- a/public/css/roomdetail.css
+++ b/public/css/roomdetail.css
@@ -67,6 +67,7 @@
   line-height: 60px;
   color: var(--color);
   transition: 0.4s;
+  border-radius: 2px;
 }
 .btn_area a {
   --color: #494949;
@@ -204,8 +205,7 @@
   padding: 30px 0;
 }
 .service li {
-  width: 33%;
-  padding-right: 50px;
+  padding-right: 40px;
   color: #494949;
 }
 .service button {
@@ -230,6 +230,7 @@
 .service p {
   font-size: 14px;
   padding-top: 30px;
+  letter-spacing: 1px;
 }
 .special_service {
   max-width: 1440px;
@@ -340,10 +341,19 @@
   width: 120px;
   height: 40px;
   line-height: 42px;
+  border-radius: 2px;
+  transition: 0.3s;
+}
+.list_btn:hover {
+  background-color: rgb(118, 118, 118);
 }
 .list_btn > a {
-  padding: 8px 25px;
+  padding: 8px 40px;
   color: #494949;
+  transition: 0.3s;
+}
+.list_btn > a:hover {
+  color: white;
 }
 #rev_btn {
   display: none;
@@ -461,6 +471,9 @@
   .f34_w1440 {
     padding: 50px 30px;
     box-sizing: border-box;
+  }
+  .service li {
+    width: 33%;
   }
   .service_img {
     width: 460px;
