--- a/views/event_detail_pic.ejs
+++ b/views/event_detail_pic.ejs
@@ -24,7 +24,7 @@
                         <h3>이벤트 기간 2022.04.06 - 선착순</h3>
                     <div>
                     <div class="e_txt_intro">
-                        <p>밀레니엄 힐튼 서울이 탁 트인 야외에서 여유로운 스테이케이션을 즐길 수 있는</p>button
+                        <p>밀레니엄 힐튼 서울이 탁 트인 야외에서 여유로운 스테이케이션을 즐길 수 있는</p>
                         <p>‘픽캉스 (피크닉 + 호캉스) 패키지’를 선보입니다. </p>
                         <p>호텔을 마주보는 남산 공원에서 보다 쾌적한 피크닉을 즐길 수 있도록</p>
                         <p>호텔에서 특별 제작한 피크닉 매트와 에코백을 제공합니다. </p>
@@ -59,7 +59,9 @@
         </section>
         <article class="e_detail_more">
             <div>
-                <button id="e_btn" type="button"><a href="/event">목록</a></button>
+                <button id="e_btn" type="button" onclick="javascript:location.href='/event'">
+                    LIST
+                </button>
             </div>
         </article>
     </main>
