--- a/views/join_agree.ejs
+++ b/views/join_agree.ejs
@@ -134,7 +134,7 @@
                 </ul>
             </article>
             <div class="join_submit">
-                <input type="button" value="다음" id="agreeBtn">
+                <input type="button" value="NEXT" id="agreeBtn">
             </div>
         </section>
     </form>
