--- a/views/notice_deta.ejs
+++ b/views/notice_deta.ejs
@@ -52,7 +52,7 @@
             <form>
                 <input type="hidden" name="id" value="<%=row.id%>">
                 <article class="notice_deta_top">
-                    <h4 style="width: 20%;">SERVICE</h4>   
+                    <h4 style="width: 20%;"><%=row.noticeItem%></h4>   
                     <h4 style="width: 70%;">
                         <%=row.title%>
                     </h4>   
@@ -62,9 +62,7 @@
                     </div>   
                 </article>
                 <article class="notice_deta_body">
-                    <p>
-                        <%=row.content%>
-                    </p>
+                    <div style="white-space: pre-line;"><%=row.content%></div>
                 </article>
             </form>
             <div class="notice_btn1">
